Integrate Text.lk SMS API and sync user profile updates
Replaced Twilio SMS integration with Text.lk API in backend, including a new /api/send-sms route using axios. Updated frontend to send SMS confirmations on appointment booking and added a mechanism to sync user profile changes between dashboard and global state. Also added necessary dependencies for SMS functionality.

--- a/frontend/.gitignore
+++ b/frontend/.gitignore
@@ -22,3 +22,11 @@ dist-ssr
 *.njsproj
 *.sln
 *.sw?
+
+Environment variables (CRITICAL: Do not remove this line)
+.env
+
+OS generated files
+
+.DS_Store
+Thumbs.db
